--- a/CRUD_App_Using_ADO/Views/Home/Edit.cshtml
+++ b/CRUD_App_Using_ADO/Views/Home/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Update</h2>
 
 
 @using (Html.BeginForm())
@@ -40,6 +40,7 @@
                 @Html.ValidationMessageFor(model => model.Salary, "", new { @class = "text-danger" })
             </div>
         </div>
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.Dept, htmlAttributes: new { @class = "control-label col-md-2" })
